--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,13 +29,13 @@ jobs:
             - v1-dependencies-{{ checksum "build.gradle" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-      - run:
-          name: Install OpenJDK 8
-          command: |
-            sudo apt-get update && sudo apt-get install openjdk-8-jdk
-            sudo update-alternatives --set java /usr/lib/jvm/java-8-openjdk-amd64/bin/java
-            sudo update-alternatives --set javac /usr/lib/jvm/java-8-openjdk-amd64/bin/javac
-            java -version
+#      - run:
+#          name: Install OpenJDK 8
+#          command: |
+#            sudo apt-get update && sudo apt-get install openjdk-8-jdk
+#            sudo update-alternatives --set java /usr/lib/jvm/java-8-openjdk-amd64/bin/java
+#            sudo update-alternatives --set javac /usr/lib/jvm/java-8-openjdk-amd64/bin/javac
+#            java -version
       - run: java -version
       - run: ./gradlew dependencies
       - save_cache:
