--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,12 +4,17 @@
 #
 version: 2.1
 machine: true
+  environment:
+    JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
+dependencies:
+  pre:
+    - sudo update-alternatives --set java /usr/lib/jvm/jdk1.8.0/bin/java
+    - sudo update-alternatives --set javac /usr/lib/jvm/java-8-openjdk-amd64/bin/javac
+#    - echo 'export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64' >> ~/.circlerc
 jobs:
   build:
     machine:
       image: ubuntu-2004:202010-01
-      java:
-        version: 'openjdk8'
 
     resource_class: large
 
